2020-01-07 Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.c (write_fru): Fix invalid number of args
	to pstdout_printf.

	* ipmi-dcmi/ipmi-dcmi.c (_mandatory_platform_attributes): Fix
	argument type passed pstdout_printf().

	* ipmi-dcmi/ipmi-dcmi.c (get_asset_tag): Fix lgtm.com warning by
	casting unsigned char * to wchar_t *.

	* ipmi-fru/ipmi-fru.c (run_cmd_args): Fix lgtm.com warning correct
	output type in pstdout_printf().

	* ipmi-oem/ipmi-oem-dell.c (ipmi_oem_dell_get_system_info): Fix
	invalid output with invalid variable passed to pstdout_printf().

	* ipmi-oem/ipmi-oem-intel.c (ipmi_oem_intel_get_smtp_config): Fix
	invalid call to pstdout_printf(), forgot output parameters.

	* ipmi-oem/ipmi-oem-intelnm.c
	(_ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common):
	Fix invalid call to pstdout_printf(), forgot output parameter.

	* ipmi-oem/ipmi-oem-quanta.c
	(ipmi_oem_quanta_get_processor_information): Fix invalid call to
	pstdout_printf(), forgot output parameters.

	* ipmi-sensors/ipmi-sensors-detailed-output.c
	(_detailed_output_accuracy): Escape % character for clarity.

	* ipmi-sensors/ipmi-sensors-oem-intel-quanta-qssc-s4r.c
	(ipmi_sensors_oem_intel_quanta_qssc_s4r_output_oem_record): Fix
	output type in call to pstdout_printf().

	* libipmiconsole/ipmiconsole_processing
	(_serial_keepalive_timeout): Fix bad debug trace without parameter
	for output.

	* libfreeipmi/sel/ipmi-sel-string-intel-e52600v3-common.c
	(sel_string_output_intel_e52600v3_event_data2_discrete_oem)
	(sel_string_output_intel_e52600v3_event_data2_class_oem): Rename
	local variable that masked outside scope variable name.

2019-11-27 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-parse-util.c
	(ipmi_sdr_parse_sensor_name, ipmi_sdr_parse_entity_sensor_name):
	Fix invalid parameter check to fix compiler warning.

2019-11-18 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru.c: Workaround unexpected completion
	code indicating no FRU data available.
